[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "squlearn"
readme = "README.md"
authors = [
    {name = "David Kreplin", email = "david.kreplin@ipa.fraunhofer.de"},
    {name = "Frederic Rapp", email = "frederic.rapp@ipa.fraunhofer.de"},
    {name = "Marco Roth", email = "marco.roth@ipa.fraunhofer.de"},
    {name = "Jan Schnabel", email = "jan.schnabel@ipa.fraunhofer.de"},
    {name = "Moritz Willmann", email = "moritz.willmann@ipa.fraunhofer.de"},
]
maintainers = [
    {name = "David Kreplin", email = "david.kreplin@ipa.fraunhofer.de"},
    {name = "Moritz Willmann", email = "moritz.willmann@ipa.fraunhofer.de"},
]
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["quantum", "machine learning", "qml"]
dependencies = [
    "dill>=0.3",
    "numpy>=1.17",
    "qiskit>=0.43.0",
    "qiskit-aer>=0.12.0",
    "qiskit-ibm-runtime>=0.9",
    "qiskit-machine-learning>=0.6.1",
    "scipy>=1.5",
    "scikit-learn>=1.0",
    "tqdm>=4.0",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "myst-parser",
    "nbmake",
    "nbsphinx",
    "nbsphinx_link",
    "pylint",
    "pytest",
    "sphinx",
    "sphinxcontrib-spelling",
    "sphinx-rtd-theme",
    "jupyter-sphinx",
]
examples = [
    "jupyter",
    "matplotlib>=3.5",
    "mlflow",
    "pandas",
    "pylatexenc>=2.10",
    "seaborn",
    "scikit-optimize",
]

[project.urls]
Homepage = "https://github.com/sQUlearn/squlearn"

[tool.black]
line-length=99

[tool.pylint]
max-line-length=99
good-names=["X", "y", "i", "j"]

[tool.pylint.main]
extension-pkg-allow-list = [
    "numpy",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=examples/tutorials/qnn_backend_mitigation.ipynb",
]
